[project]
name = "qqq-voo-monte-carlo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "notebook>=7.4.3",
    "numpy==1.26",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "prettytable>=3.16.0",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.61",
]
